--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # JWT secret key
-security.jwt.secret-key =${JWT_SECRET_KEY}
+security.jwt.secret-key=${JWT_SECRET_KEY}
 security.jwt.expiration-time=3600000
 #
 # Mail properties
@@ -17,4 +17,4 @@ spring.mail.password=${APP_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-spring.config.import=optional:file:.env[.properties]
+spring.config.import=optional:file:config.properties
